<resources>
    <string name="app_name">AppEllas</string>
    <string name="description_logo">Logo AppEllas</string>
    <string name="login_text">Login</string>
    <string name="login_description">Please sign in to continue.</string>
    <string name="hint_input_email">EMAIL</string>
    <string name="hint_input_password">PASSWORD</string>
    <string name="login_button_text">Login</string>
    <string name="login_forgot_text">Forgot your password?</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="login_signup_text">Sign up</string>
    <string name="description_arrow_return">Flecha de regreso</string>
    <string name="register_text_tittle">Create Account</string>
    <string name="register_description_tittle_text">Please fill the input below here</string>
    <string name="hint_input_name">FULL NAME</string>
    <string name="hint_input_phone">PHONE</string>
    <string name="hint_input_confirm_password">CONFRIRM PASSWORD</string>
    <string name="register_button_text">SIGN UP</string>
    <string name="register_have_account_text">Already have a account?</string>
    <string name="recovery_text_tittle">Change Password</string>
    <string name="recovery_description_tittle_text">Fill in the spaces to change the password</string>
    <string name="recovery_button_text">Change Password</string>
    <string name="recovery_return_login_text">Return to login</string>
    <string name="description_alert_button">Alert Button</string>
    <string name="bottom_menu_settings_title">Settings</string>
    <string name="bottom_menu_profile_title">Profile</string>
    <string name="description_logo_blog">Logo blog</string>
    <string name="homepage_blog_description">Blog informativo</string>
    <string name="description_logo_advisory">logo asesoria</string>
    <string name="homepage_advisory_description">Asesoria</string>
    <string name="description_logo_map">map logo</string>
    <string name="homepage_map_description">Mapa de informacion</string>
    <string name="description_logo_information_page">information page logo</string>
    <string name="homepage_information_page_description">Pagina de informacion</string>
    <string name="bottom_navigtaion_blog_title">Blog</string>
    <string name="bottom_navigation_advisory_title">Advisory</string>
    <string name="bottom_navigation_map_title">Map</string>
    <string name="bottom_navigation_information_title">Information</string>
    <string name="blog_title">Blogs</string>
    <string name="blog_title_description">Learn about other people\'s stories</string>
    <string name="description_return_arrow">flecha de regreso</string>
    <string name="description_floating_action_new">Add button</string>
    <string name="create_blog_title">Create Blog</string>
    <string name="create_blog_title_description">Tell us about your story</string>
    <string name="create_blog_hint_title">Title</string>
    <string name="create_blog_hint_subtitle">Subtitle</string>
    <string name="create_blog_hint_description">Description</string>
    <string name="description_blog_image">Blog image</string>
    <string name="create_blog_upload_text">Upload</string>
    <string name="create_blog_share_button_text">Share your experience</string>
    <string name="description_blog_imageview">Blog Image</string>
    <string name="advisory_title">Advisory</string>
    <string name="advisory_title_description">Get help from an expert</string>
    <string name="description_logo_legal">legal_button</string>
    <string name="advisory_legal_description">Legal</string>
    <string name="description_logo_doctors">doctors_button</string>
    <string name="advisory_doctors_description">Doctors</string>
    <string name="description_logo_psychologist">psychologist button</string>
    <string name="advisory_psychologist_description">Psychologist</string>
    <string name="description_img_advisory">Advisor photo</string>
    <string name="advisory_legal_contact_title_text">Legal contacts</string>
    <string name="advisory_medical_contact_title_text">Medical contacts</string>
    <string name="advisory_psychologist_contact_title_text">Psychologist contacts</string>
    <string name="informative_map_title">Informative Map</string>
    <string name="bottom_navigation_user_title">Profile</string>
    <string name="description_profile_photo">profile photo</string>
    <string name="profile_save_changes_button_text">Save Changes</string>
    <string name="profile_delete_button_text">Delete account</string>
    <string name="description_manage_accounts_admin">Administrar cuentas</string>
    <string name="homepage_admin_manage">Administrar cuentas</string>
    <string name="homepage_admin_map_description">Mapa de emergencia</string>
    <string name="description_logo_report">Report Image</string>
    <string name="homepage_admin_report_description">Control de usuarios</string>
    <string name="manage_accounts_title">Manage accounts</string>
    <string name="blog_tab">Blog</string>
    <string name="advisory_tab">Advisory</string>
    <string name="map_tab">Map</string>
    <string name="information_tab">Information</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="bottom_menu_home_title">Home</string>
    <string name="bottom_menu_blog_title">Blog</string>
    <string name="bottom_menu_advisory_title">Advisory</string>
    <string name="bottom_menu_map_title">Informative Map</string>
    <string name="bottom_menu_informative_page_title">Informative Page</string>
    <string name="admin_map_title">Emergency Map</string>
</resources>