<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E1B30"
        android:padding="@dimen/maximum_gap">

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/description_logo"
            android:src="@mipmap/logo_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/tittle_text_size"
            android:textColor="@color/white"
            android:text="@string/login_text"
            app:layout_constraintTop_toBottomOf="@id/logo_app"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/default_text_size"
            android:textColor="#787575"
            android:text="@string/login_description"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_email"
            android:textColorHint="#787575"
            android:layout_marginTop="@dimen/medium_gap"
            app:boxCornerRadiusTopEnd="@dimen/radius_input"
            app:boxCornerRadiusTopStart="@dimen/radius_input"
            app:boxCornerRadiusBottomStart="@dimen/radius_input"
            app:boxCornerRadiusBottomEnd="@dimen/radius_input"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/white"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_login_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                tools:text="josenasser2009@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_password"
            android:textColorHint="#787575"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusTopEnd="@dimen/radius_input"
            app:boxCornerRadiusTopStart="@dimen/radius_input"
            app:boxCornerRadiusBottomStart="@dimen/radius_input"
            app:boxCornerRadiusBottomEnd="@dimen/radius_input"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/white"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_login"
            android:layout_width="220dp"
            android:layout_height="65dp"
            android:backgroundTint="#1E1B30"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/default_text_size"
            android:text="@string/login_button_text"
            android:textColor="#FFC58F"
            app:strokeColor="#FFC58F"
            app:strokeWidth="1dp"
            app:cornerRadius="@dimen/button_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_layout_password"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/login_forgot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimum_gap"
            android:text="@string/login_forgot_text"
            android:textColor="#FFC58F"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_login" />

        <TextView
            android:id="@+id/login_no_accoun_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#787575"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/no_account_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_signup_text"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/login_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login_signup_text"
            android:textColor="#FFC58F"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toTopOf="@id/login_no_accoun_text"
            app:layout_constraintBottom_toBottomOf="@id/login_no_accoun_text"
            app:layout_constraintStart_toEndOf="@id/login_no_accoun_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>