<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1E1B30"
    android:padding="@dimen/maximum_gap">

    <ImageView
        android:id="@+id/recovery_return_arrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_arrow_return" />

    <TextView
        android:id="@+id/recovery_text_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/recovery_text_tittle"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_return_arrow"/>

    <TextView
        android:id="@+id/recovery_description_tittle_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:text="@string/recovery_description_tittle_text"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#787575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recovery_text_tittle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recovery_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/hint_input_email"
        android:textColorHint="#787575"
        android:layout_marginTop="@dimen/maximum_gap"
        app:boxCornerRadiusTopEnd="@dimen/radius_input"
        app:boxCornerRadiusTopStart="@dimen/radius_input"
        app:boxCornerRadiusBottomStart="@dimen/radius_input"
        app:boxCornerRadiusBottomEnd="@dimen/radius_input"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_description_tittle_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recovery_input_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recovery_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/hint_input_password"
        android:textColorHint="#787575"
        android:layout_marginTop="@dimen/input_gap"
        app:boxCornerRadiusTopEnd="@dimen/radius_input"
        app:boxCornerRadiusTopStart="@dimen/radius_input"
        app:boxCornerRadiusBottomStart="@dimen/radius_input"
        app:boxCornerRadiusBottomEnd="@dimen/radius_input"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_input_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recovery_input_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recovery_input_layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/hint_input_confirm_password"
        android:textColorHint="#787575"
        android:layout_marginTop="@dimen/input_gap"
        app:boxCornerRadiusTopEnd="@dimen/radius_input"
        app:boxCornerRadiusTopStart="@dimen/radius_input"
        app:boxCornerRadiusBottomStart="@dimen/radius_input"
        app:boxCornerRadiusBottomEnd="@dimen/radius_input"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/white"
        app:boxStrokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_input_layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recovery_input_edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_recovery"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginTop="@dimen/maximum_gap"
        android:backgroundTint="@color/primary_color"
        android:text="@string/recovery_button_text"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/secondary_color"
        app:strokeWidth="1dp"
        app:strokeColor="@color/secondary_color"
        app:rippleColor="@color/secondary_color"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_input_layout_confirm_password"/>

    <TextView
        android:id="@+id/recovery_return_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minimum_gap"
        android:text="@string/recovery_return_login_text"
        android:textColor="@color/secondary_color"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_recovery"/>

</androidx.constraintlayout.widget.ConstraintLayout>